kserve-keda-prometheus/demo/ocp/cma.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: openshift-keda
  labels:
    openshift.io/cluster-monitoring: "true"
---
