kserve-keda-prometheus/demo/ocp/test.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kserve-keda-prometheus
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: kserve-keda-prometheus
  labels:
    app: sample-app
spec:
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
        - name: sample-app
          image: docker.io/stefanprodan/podinfo:6.0.0 # Using a specific version
          ports:
            - containerPort: 9898
              name: http
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-service
  namespace: kserve-keda-prometheus
  labels:
    app: sample-app
spec:
  selector:
    app: sample-app
  ports:
    - name: http
      port: 9898
      targetPort: http
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: sample-app-route
  namespace: kserve-keda-prometheus
  labels:
    app: sample-app
spec:
  to:
    kind: Service
    name: sample-app-service
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
